# financial-mcp-server

./: .env.example  .gitignore  README.md  pyproject.toml
src/financial_mcp/: cache.py  config.py  exceptions.py  rate_limiter.py  server.py
src/financial_mcp/adapters/: alpha_vantage_adapter.py  coingecko_adapter.py  fred_adapter.py  polygon_adapter.py  sec_adapter.py  tiingo_adapter.py  yfinance_adapter.py
src/financial_mcp/tools/: crypto.py  equities.py  forex_commodities.py  macro.py
tests/: test_adapters.py
